--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-multiselect",
+  "name": "jackmartin-vue-multiselect",
   "version": "2.1.5",
   "private": false,
   "types": "index.d.ts",
